fix(restart): :chart_with_upwards_trend: change restart method test, change golang to 1.17.2
