# docs/swagger.json
@@ -124,6 +124,31 @@
                 }
             }
         },
+        "/system/full_restart": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "mainsystem"
+                ],
+                "summary": "FullRestart",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/system/pyserver/host": {
             "post": {
                 "consumes": [
